--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.12.4",
     "@apollo/experimental-nextjs-app-support": "^0.11.7",
+    "graphql": "^16.10.0",
     "next": "15.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
