chore: Update Lighthouse CI configuration and workflow
- Added a step to build and start the Next.js server in the Lighthouse CI workflow
- Updated the lighthouserc.json file to use a different start server command and ready pattern
- Changed the number of runs in the Lighthouse CI workflow to 1
- Updated the chromeFlags in the Lighthouse CI workflow settings

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -25,5 +25,12 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
+      # Start the Next.js server and ensure it's ready
+      - name: Build and start Next.js
+        run: |
+          npm run build
+          npm run start & # Run in background
+          npx wait-on http://localhost:3000 # Wait for server to be ready
+
       - name: Run Lighthouse CI
         run: npx lhci autorun
