chore: Update Lighthouse CI configuration and workflow
- Update Lighthouse CI configuration to use a different port (3001) for the server
- Update Lighthouse CI workflow to wait for the server on port 3001 to be ready
- Update lighthouserc.json to use port 3001 for starting the server

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -12,6 +12,8 @@ on:
 jobs:
   lighthouse:
     runs-on: ubuntu-latest
+    env:
+      PORT: 3001  # Use a different port
 
     steps:
       - name: Checkout Code
@@ -32,8 +34,10 @@ jobs:
           NODE_TLS_REJECT_UNAUTHORIZED: ${{ secrets.NODE_TLS_REJECT_UNAUTHORIZED }}
         run: |
           npm run build
-          npm run start & # Run in background
-          npx wait-on http://localhost:3000 # Wait for server to be ready
+          PORT=3001 npm run start & # Run in background
+          npx wait-on http://localhost:3001 --timeout 60000 # Wait for server to be ready
 
       - name: Run Lighthouse CI
+        env:
+          LHCI_GITHUB_APP_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npx lhci autorun
