--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_STRAPI_URL=https://ec2-XX-XX-XX-XX.eu-central-1.compute.amazonaws.com/graphql
 NODE_TLS_REJECT_UNAUTHORIZED=1
+NEXT_PUBLIC_GTM_ID=GTM-XXXXXX
